[package]
name = "pink-drink"
version = "0.1.0-dev.0"
edition = "2021"
description = "A drink runtime implementation for Phat Contract"
license = "Apache-2.0"
keywords = ["phat-contract", "pink", "ink"]

[dependencies]
log = "0.4.20"
ink = "4"
hex = "0.4.3"
drink = "0.8.0"
pink = "0.1.0-dev.0"
pink-chain-extension = "0.1.0-dev.0"
scale = { version = "3.6.5", package = "parity-scale-codec" }
scale-info = "2.10.0"
frame-support = "23.0.0"
frame-system = "23.0.0"
pallet-balances = "23.0.0"
sp-core = "23.0.0"
pallet-contracts = { version = "22.0.1", package = "pallet-contracts-for-drink" }
pallet-timestamp = "22.0.0"
environmental = "1.1.4"
pallet-contracts-primitives = "26.0.0"
sidevm-host-runtime = "0.1"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
